--- a/spamorham.ipynb
+++ b/spamorham.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "8D9s95xarqVc"
       },
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "Cvzbr2dF3rh2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
         "id": "5tEkMasX385V",
         "outputId": "ae88b3e1-1568-41d0-f800-9137402c960e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,7 +87,7 @@
         "id": "kW_q4tWO3-eG",
         "outputId": "33c4ad83-b627-4720-cf4f-1d1d3108ed4e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
         "id": "uvVxBeTw4CBt",
         "outputId": "66e7471c-f05e-44d4-d577-cacf01ddce9b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -147,7 +147,7 @@
         "id": "vKePB4HM4JVJ",
         "outputId": "a90ab37f-548c-4398-feba-1a3fb59d66d4"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,7 +186,7 @@
         "id": "AWXwtZIl4ZEM",
         "outputId": "848d3c0b-d886-4e36-a8a1-5348824317c4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -222,7 +222,7 @@
         "id": "7IJKU9IM4gXZ",
         "outputId": "efb13684-d7bb-403c-99b6-c89313b49246"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -252,28 +252,28 @@
       "metadata": {
         "id": "5azb9uGA30Xg"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Tokenization and Padding\n",
-        "max_words = 10000  # Adjust based on vocabulary size\n",
+        "max_words = 10000\n",
         "tokenizer = Tokenizer(num_words=max_words)\n",
         "tokenizer.fit_on_texts(X_train)\n",
         "\n",
         "X_train_seq = tokenizer.texts_to_sequences(X_train)\n",
         "X_test_seq = tokenizer.texts_to_sequences(X_test)\n",
         "\n",
-        "max_sequence_length = 150  # Adjust based on average SMS length\n",
+        "max_sequence_length = 150\n",
         "X_train_pad = pad_sequences(X_train_seq, maxlen=max_sequence_length)\n",
         "X_test_pad = pad_sequences(X_test_seq, maxlen=max_sequence_length)"
       ],
       "metadata": {
         "id": "S2GPbFet41rt"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +281,7 @@
       "source": [
         "\n",
         "# Model\n",
-        "embedding_dim = 100  # Adjust based on embedding dimensions\n",
+        "embedding_dim = 100\n",
         "\n",
         "model = Sequential()\n",
         "model.add(Embedding(input_dim=max_words, output_dim=embedding_dim, input_length=max_sequence_length))\n",
@@ -298,7 +298,7 @@
         "id": "m-A0PGjC42co",
         "outputId": "c7778a4b-0a81-4c58-a95e-c3f0610adff7"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,7 +338,7 @@
         "id": "1AFZ4rco45Fb",
         "outputId": "3955afdf-4e9f-4796-d56d-1b720c06471c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +384,7 @@
         "id": "VdbRl1HF49nh",
         "outputId": "64e5ce08-d1fd-421b-f827-e7209974c59b"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,11 +408,11 @@
       "cell_type": "code",
       "source": [
         "def classify_sms(text):\n",
-        "    # Preprocess the text\n",
+        "    # Preprocessing the text\n",
         "    text_seq = tokenizer.texts_to_sequences([text])\n",
         "    text_pad = pad_sequences(text_seq, maxlen=max_sequence_length)\n",
         "\n",
-        "    # Predict the class\n",
+        "    # Predicting the class\n",
         "    prob = model.predict(text_pad)[0][0]\n",
         "    if prob > 0.5:\n",
         "        return \"spam\"\n",
@@ -422,7 +422,7 @@
       "metadata": {
         "id": "dzjl5qumsLql"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
         "id": "rWvRS5S0vdtM",
         "outputId": "d439e9e8-b411-4567-d275-fb6006172f84"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +465,7 @@
         "id": "Z-91F8U1vmBl",
         "outputId": "d1f5d7b1-4056-44c7-a385-80afbb9088e0"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +491,7 @@
         "id": "NdAs3P0vvrmE",
         "outputId": "8d4d6fdb-d853-401d-db9c-741a0bcacf28"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +517,7 @@
         "id": "ub8KgvHbv4DG",
         "outputId": "f4b60c65-4648-49cb-c7d5-b4d0d143c02f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +543,7 @@
         "id": "6FkOcnR9v68J",
         "outputId": "3174270d-dbd3-49ae-bdb8-b2b86ed0700e"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
         "id": "0WmSz5nGwg_B",
         "outputId": "f39e7aca-c2aa-4732-9757-0bb422b06b75"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
